# incident-response

./: .env.example  .gitignore  README.md  TECHNICAL_DEEP_DIVE.md
backend/: pyproject.toml
backend/app/: config.py  db.py  events.py  main.py  models.py  schemas.py  state_machine.py
backend/app/adapters/: factory.py
backend/app/adapters/github/: base.py  local_git_adapter.py  real_github_adapter.py
backend/app/adapters/llm/: llm_client.py
backend/app/adapters/slack/: base.py  mock_slack_adapter.py  real_slack_adapter.py
backend/app/live/: app_manager.py  detector.py  metrics.py  traffic.py
backend/app/pipeline/: commit_analysis.py  impact_estimator.py  orchestrator.py  postmortem.py  remediation.py  runbook_rag.py  slack_brief.py
backend/app/routers/: environment.py  fault_scenarios.py  incidents.py  live_metrics.py  stream.py
backend/app/seed/: fault_scenarios.py  seed_ecommerce_repo.py  seed_runbooks.py
backend/tests/: conftest.py  test_adapter_conformance.py  test_metrics_and_detector.py  test_pipeline_with_mocks.py  test_state_machine.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: EcommerceStorefront.tsx  EnvironmentBar.tsx  FaultPicker.tsx  IncidentList.tsx  IncidentTimeline.tsx  MetricsPanel.tsx  PostmortemView.tsx  SlackBriefCard.tsx
runbooks/: cache-ttl-runbook.md  checkout-slow-query-runbook.md  connection-pool-config-runbook.md  payment-webhook-null-pointer-runbook.md
